added blank target

--- a/src/views/pages/landing.htm
+++ b/src/views/pages/landing.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <meta name="description" content="hodss - developer" />
+  <meta name="description" content="hodss, who am i? what do i do?" />
   <link
     rel="icon"
     href="/src/cdn/hodfolds.png"
@@ -19,11 +19,11 @@
   <body>
              <div class="sticky">
                
-      <p> <a href="https://twitter.com/hodss_">
+      <p> <a href="https://twitter.com/hodss_" target="_blank">
         Twitter</a> | 
-        <a href="https://github.com/hodss">
+        <a href="https://github.com/hodss" target="_blank">
           GitHub</a> |
-        <a href="https://discord.com/users/950140983834718268">
+        <a href="https://discord.com/users/950140983834718268" target="_blank">
           Discord</a> 
         <br>
         <br>
