--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,46 @@ img {
 }
 
 
+ html::-webkit-scrollbar {
+      width: 20px;
+      
+    }
+   html::-webkit-scrollbar-track {
+    
+    
+    background-color: black;
+  }
+
+  html::-webkit-scrollbar-thumb {
+    background: #4e4e4e;
+    border-radius: 25px;
+   }
+/* minimalist design */ 
+html::-webkit-scrollbar {
+    width: 10px;
+    
+  }
+
+  html::-webkit-scrollbar-track {
+    background: rgb(179, 177, 177);
+    border-radius: 10px;
+}
+
+  html::-webkit-scrollbar-thumb {
+    background: rgb(136, 136, 136);
+    border-radius: 10px;
+  }
+
+  html::-webkit-scrollbar-thumb:hover {
+    background: rgb(100, 100, 100);
+    border-radius: 10px;
+  }
+
+  html::-webkit-scrollbar-thumb:active {
+    background: rgb(68, 68, 68);
+    border-radius: 10px;
+  }
+
 
 
 
