scrollbar, page links, portfolio, license

--- a/src/views/pages/landing.htm
+++ b/src/views/pages/landing.htm
@@ -36,7 +36,10 @@
   <br>
   <h2>I'm hod</h2>
   <br>
-
+<p>
+  <a href="/portfolio">Portfolio</a> |
+<a href="/">Home</a> | <a href="/license">License</a> 
+</p>
 
 
 </div>
@@ -49,7 +52,14 @@
 </div>
 <div style="padding: 40px;"></div>
   <div class="knows">
-<p> (COMING SOON!) You can also see some of my projects and my portfolio </p>
+<p> Heres what you can see about me right now, there will probably be more later! <br> <br>
+<a href="/portfolio">
+  <li>Portfolio</li>
+</a>
+  <a href="/license" style="height: auto;">
+  <li>The License that the majority of my works are under!</li>
+</a>
+</p>
     
   </div>
 
