blog and some minor updates

--- a/src/views/pages/landing.htm
+++ b/src/views/pages/landing.htm
@@ -31,7 +31,9 @@
       </p>
     </div>
 <div class="center" data-aos="fade">
-  
+  <div>
+    <p><a href="/standwithukraine" style="text-decoration: underline;">#StandWithUkraine</a></p>
+  </div>
 <h1>Oh, Hello World!</h1>
   <br>
   <h2>I'm hod</h2>
