--- a/src/views/pages/portfolio.html
+++ b/src/views/pages/portfolio.html
@@ -45,6 +45,9 @@
      <a href="https://github.com/jusoftdev" target="_blank"><li>JuSoft Development</li></a>
      <a href="https://lacrp.tsscac.gq" target="_blank"><li>LACRP Web</li></a>
      <a href="https://github.com/spadescollective" target="_blank"><li>The Spades Software Collective and Consortium (TSSCAC)</li></a>
+     <br>
+     <br>
+     Personally, I like to develop frontend websites, apps, and so forth, but I am capable of minimal backend, but my main focus is always minimal design. The feeling of the Google landing page is something I want to recreate, modernize, and use as a template for most of my projects. Good UI and frontend leads to happy users and more users. Have you ever visited one of those news sites where the whole screen is pratically covered in ads, navigation, links, et cetra? Well that's something I never want to see, it clutters the screen, makes it hard to concentrate makes it harder to find the page you're looking for, that's not what I want. I want to provide a professional, modern looking webpage.
 </p>
    </div>
 <br>
