fixed minor problem where on mobile text would overlap

--- a/src/views/pages/landing.htm
+++ b/src/views/pages/landing.htm
@@ -49,11 +49,11 @@
  <img style="margin-left: auto; margin-right: auto;" src="/src/cdn/hodfolds.png" />
     </div>
 <div style="padding: 40px;"></div>
-<div class="knows">
+<div class="knows" style="height: auto;">
   <p>I've been interested in Computer Science since, well, forever. I know a decent variety of different programming languages, however my strong suit is by far Web Development using HTML, CSS, and JavaScript to bring websites to life is one of my favorite things, however I'm fluent in over 7 different frameworks or languages, including, Express, Node, Fastify, Lua, HTML, CSS, JavaScript, and I'm working on Vue!</p>
 </div>
 <div style="padding: 40px;"></div>
-  <div class="knows">
+  <div class="knows" style="height: auto;">
 <p> Heres what you can see about me right now, there will probably be more later! <br> <br>
 <a href="/portfolio">
   <li>Portfolio</li>
