404 plus newsite and imgdesign

--- a/src/views/pages/landing.htm
+++ b/src/views/pages/landing.htm
@@ -32,6 +32,7 @@
     </div>
 <div class="center" data-aos="fade">
   <div>
+     <p><a href="/imagedesigners" style="text-decoration: underline;">hod is looking for image designers!</a></p>
     <p><a href="/standwithukraine" style="text-decoration: underline;">#StandWithUkraine</a></p>
   </div>
 <h1>Oh, Hello World!</h1>
@@ -69,7 +70,7 @@
 <br>
 <br>
 
-<p>Copyright (&copy;) JWD "hod" | hod@tsscac.gq</p>
+<p>Copyright (&copy;) JWD "hod" | hod@hodss.xyz</p>
     
   </body>
 </html>
