--- a/src/views/pages/newsite.html
+++ b/src/views/pages/newsite.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-  <meta name="description" content="hodss - developer" />
+  <meta name="description" content="hodss - portfolio" />
   <link
     rel="icon"
     href="/src/cdn/hodfolds.png"
     type="image/png"
   />
-  <title>hodss</title>
+  <title>hodss - portfolio</title>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,18 +30,23 @@
         &lt;/&gt; with &lt;3 by hod :)
       </p>
     </div>
-<div class="center" data-aos="fade">
-  
-<h1>Ruh roh</h1>
-  <br>
-  <h2 style="color: grey; text-decoration: underline;">That was not supposed to happen...</h2>
-  <br>
-  <h3> Error code 404 "Page Not Found"</h3>
-<br> <a href="/">
-<h4>Maybe try the homepage?</h4>
-</a>
-</div>
-
+    <div class="center" data-aos="fade">
+<h1>Hello We've Switched to hodss.xyz instead of hodss.gq</h1>
+<h2>A Modern Website Requires a Modern Domain</h2>
+      <p>
+  <a href="/portfolio">Portfolio</a> |
+<a href="/">Home</a> | <a href="/license">License</a> 
+</p>
+      </div>
+   <div class="knows" style="height: auto;" data-aos="fade"> <p>
+  I've switched the primary website to this, but the old website will still redirect.
+     <br>
+     <br> you can click<u>
+     <a href="/">here</a>
+     </u>
+     to get to the homepage!
+</p>
+   </div>
 <br>
 <br>
 <br>
