--- a/src/views/pages/portfolio.html
+++ b/src/views/pages/portfolio.html
@@ -57,7 +57,7 @@
 <br>
 <br>
     
-<p>Copyright (&copy;) JWD "hod" | hod@tsscac.gq</p>
+<p>Copyright (&copy;) JWD "hod" | hod@hodss.xyz</p>
     
   </body>
 </html>
