--- a/src/views/pages/license.htm
+++ b/src/views/pages/license.htm
@@ -55,7 +55,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <br>
 <br>
     
-<p>Copyright (&copy;) JWD "hod" | hod@tsscac.gq</p>
+<p>Copyright (&copy;) JWD "hod" | hod@hodss.xyz</p>
     
   </body>
 </html>
