--- a/public/style.css
+++ b/public/style.css
@@ -25,19 +25,24 @@ weight: 900;
 a {
   color: black;
   text-decoration: none;
-
+  
 }
 
 a:hover {
   text-decoration: underline;
-  
+
 }
 
 img {
   margin: auto;
   text-align: center;
   display: block;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+img:hover {
+  box-shadow: 0 30px 20px 0 rgba(0,0,0,0.2);
 }
 
 .knows {
@@ -53,7 +58,7 @@ img {
 }
 
 .knows:hover {
-   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+   box-shadow: 0 30px 48px 0 rgba(0,0,0,0.2);
 }
 
 
@@ -119,7 +124,7 @@ margin: auto;
   }
 
   .knows {
-width: auto;
+width: 130px;
     
   }
 }
