added some stuff to read, updated routing

--- a/src/views/blog/ukraine.html
+++ b/src/views/blog/ukraine.html
@@ -36,6 +36,7 @@
 <a href="/">Home</a> | <a href="/license">License</a> 
 </p>
 <h1>The Russian Invasion of Ukraine</h1>
+  <h2><u><a href="#bucha">READ THE UPDATED VERSION HERE</a></u></h2>
   <br>
   <p>I am dedicated to free speech and privacy on the internet, and for god's sake, this webpage will stay up for as long as humanely possible.
   <br> <br>
@@ -47,11 +48,25 @@
     If it is blocked where you are you can use Proxy Services to remove this IP block. You can also download <a href="https://www.torproject.org/download/" target="_blank" style="text-decoration: underline;">TOR</a> among uses to get into the Dark Web it can also be used to circumvent regional IP blocks. You can also visit a Proxy I have a recommended one, but if it is blocked you can use TOR or another VPN <br> <br> <a href="https://134.209.250.149" target="_blank" style="text-decoration: underline;">CroxyProxy</a>
     <br>
     <br> 
-    <font size="10">
-    SLAVA UKRAINI! <br> <br> СЛАВА УКРАЇНІ! У НАС БУДЕ ПЕРЕМОГА! <br> <br> SALVAR UCRAINIA!
-      </font>
+   
+    <div id="bucha">
+<br> <br>
+    This is an update on the situation.
+    <br> <br>
+    Today is the ninth day of the fourth month, of the two thousanth and twenty-second year.
+      <br> <br>
+      I have been debating about making something about this for quite a while since it's become something quite horrific indeed. I recommend you to stop reading if you're not ready to hear more about what's happened in Bucha. You have been warned.
+      <br> <br> <br> <br> <br>
+
+      In Bucha, Russian soldiers have committed all that I can say is genocide. They have set up a system where they take, children, women, men, elderly, anyone, and put a bullet in their head. Sound similar to something else? Well it is. If they discover more situations like this, shooting civilians, raping women. This is period a war crime, no, it's a crime against humanity. This is so fucked up that the Russians deny this. Russia was expelled from the United Nations Human Rights Council, and then had the audacity to say that they quit it anyways moments after having been expelled. What needs to happen is the immediate removal of Russia from the UN Security Council, China and Russian have VETO power, but France, the US, and the UK need to act better. I'm not a diplomat, but based on my research, yes there will be outrage, but THIS is the exact reason that this needs to happen. Or, if you can't remove a permanent member, which can make sense, some form of suspension should be available at the dispense of the UN General Assembly.
+      <br> <br> <br>
+      Vladimir Putin, go to hell
   </p>
 </div>
+
+   <font size="10">
+    SLAVA UKRAINI! <br> <br> СЛАВА УКРАЇНІ! У НАС БУДЕ ПЕРЕМОГА! <br> <br> SALVAR UCRAINIA!
+      </font>
 
 <br>
 <br>
