--- a/src/views/pages/newsite.html
+++ b/src/views/pages/newsite.html
@@ -7,7 +7,7 @@
     href="/src/cdn/hodfolds.png"
     type="image/png"
   />
-  <title>hodss - portfolio</title>
+  <title>hodss</title>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
