additions for some files, updated express and started experimenting with some compression techniques

--- a/src/views/pages/landing.htm
+++ b/src/views/pages/landing.htm
@@ -1,5 +1,6 @@
 <!doctype html>
-<html>
+<html lang="en">
+  <meta charset="utf-8">
 <head>
   <meta name="description" content="hodss, who am i? what do i do?" />
   <link
@@ -47,7 +48,7 @@
 
 </div>
 <div data-aos="fade">
- <img style="margin-left: auto; margin-right: auto;" src="/src/cdn/hodfolds.png" />
+ <img style="margin-left: auto; margin-right: auto;" src="/src/cdn/hodfolds.png" alt="hodfoldslogo"/>
     </div>
 <div style="padding: 40px;"></div>
 <div class="knows" style="height: auto;">
@@ -65,7 +66,11 @@
 </p>
     
   </div>
-
+<div  class="center" >
+  <u> <a href="/privacy">
+  <h3>Privacy Notice</h3> </a>
+</u>
+    
 <br>
 <br>
 <br>
